<resources>
    <string name="app_name">lupo_trainer</string>
    <string name="good_night">Good Night!</string>
    <string name="start">START</string>
    <string name="personal_service">Service</string>
    <string name="account_setting">Account Setting</string>
    <string name="kevin_tsai">KEVIN TSAI</string>
    <string name="email_sample">q12345@mail.com</string>
    <string name="service_name_quick_start">Quick Start</string>
    <string name="service_name_edit_plan">Edit Plan</string>
    <string name="service_name_new_move">New Plan</string>
    <string name="plan_name">Plan Name</string>
    <string name="plan_date">Plan Date</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="toolbar_title">Title</string>
    <string name="current_plan_will_be_cancel">Current plan will be cancel!</string>
    <string name="moves_name">Moves Name</string>
    <string name="muscles">Muscles</string>
    <string name="cycles">Cycles</string>
    <string name="weight_set">Weight Set</string>
    <string name="break_time">Break Time</string>
    <string name="equipment">Equipment</string>
    <string name="cardio_moves_name">Cardio Moves Name</string>
    <string name="trainning_type">Trainning Type</string>
    <string name="train_set_will_be_saved">Train Set will be saved</string>
    <string name="times_set_hint">Times set: 20-20-20-20-20</string>
    <string name="weight_set_hint">Weight set: 20-20-20-20-20</string>

    <string-array name="muscles_list">
        <item>CHEST</item>
        <item>BACK</item>
        <item>ARMS</item>
        <item>ABDOMINALS</item>
        <item>LEG</item>
        <item>SHOULDERS</item>
    </string-array>

    <string-array name="trainTypes">
        <item>Weight Trainning</item>
        <item>Cardio Trainning</item>
    </string-array>
</resources>