<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    
    <RelativeLayout
        android:id="@+id/relativelayout_icon_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <ImageView
            android:id="@+id/imageview_logo_lupo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/lupo_black"
            android:layout_marginLeft="10dp"/>
        
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/imageview_logo_lupo"
            android:layout_centerVertical="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="WORKOUT"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:typeface="serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="ASSISTANCE"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:typeface="serif" />
            
        </LinearLayout>
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_activity"
        android:layout_width="400dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_icon_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.09">

        <RelativeLayout
            android:id="@+id/relativelayout_no_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/imageview_logo_sleep"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/sleep_time"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"/>

            <TextView
                android:id="@+id/textview_message_no_activity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageview_logo_sleep"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/good_night"
                android:textColor="@color/light_gray"
                android:textSize="24sp"
                android:typeface="serif"/>


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativelayout_has_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/imageview_logo_workout"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/bench_press"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:clickable="true"
                android:focusable="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_start_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageview_logo_workout"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/start"
                android:typeface="serif"
                android:textSize="20sp"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_service_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_activity"
        app:layout_constraintBottom_toTopOf="@+id/relativelayout_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.05">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewpager2_serivce"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="100dp"
            android:paddingEnd="100dp"
            android:orientation="horizontal"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativelayout_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_service_selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:layout_constraintHeight_default="wrap"
        android:background="@drawable/background_clickable_container"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:clickable="true">

        <LinearLayout
            android:id="@+id/linearlayout_user_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/textView_user_id_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kevin_tsai"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:typeface="serif"
                android:padding="5dp"/>

            <TextView
                android:id="@+id/textView_user_mail_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_sample"
                android:textColor="@color/dark_gray"
                android:textSize="15sp"
                android:typeface="serif"
                android:padding="5dp"/>


        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shap_round_imageview"
            android:layout_centerVertical="true"
            android:scaleType="centerInside"
            android:src="@drawable/student"/>

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>